# socks

./: CMakeLists.txt  README.md
include/common/: file_utils.hpp  socket_utils.hpp
include/receiver/: receiver.hpp
include/sender/: sender.hpp
scripts/: test_transfer.sh
src/common/: file_utils.cpp  socket_utils.cpp
src/receiver/: main.cpp  receiver.cpp
src/sender/: main.cpp  sender.cpp
